Army patch collector.Collecotrs.toList() java 15