@@ -3,6 +3,7 @@ package hu.nive.ujratervezes.kepesitovizsga.army;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class Army {
 
@@ -14,7 +15,7 @@ public class Army {
 
     public void damageAll(int damage) {
         army.forEach(unit -> unit.sufferDamage(damage));
-        List<MilitaryUnit> unfitForFights = army.stream().filter(unit -> unit.getHitPoints() < 25).toList();
+        List<MilitaryUnit> unfitForFights = army.stream().filter(unit -> unit.getHitPoints() < 25).collect(Collectors.toList());
         army.removeAll(unfitForFights);
     }
 
